<?xml version="1.0" encoding="utf-8"?><!--
   Copyright 2016 Google Inc.

   Licensed under the Apache License, Version 2.0 (the "License");
   you may not use this file except in compliance with the License.
   You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

   Unless required by applicable law or agreed to in writing, software
   distributed under the License is distributed on an "AS IS" BASIS,
   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
   See the License for the specific language governing permissions and
   limitations under the License.
-->
<resources>
    <string name="app_name">TER RA ANDROID</string>
    <string name="quitter">Quitter</string>
    <string name="options">Options</string>
    <string name="jouer">Jouer</string>
    <string name="yellowKey">Clef jaune</string>
    <string name="blueKey">Clef bleue</string>
    <string name="greenKey">Clef verte</string>
    <string name="menu">Menu</string>
    <string name="togglebutton">ToggleButton</string>
    <string name="inventory_visible">↓</string>
    <string name="inventory_invisible">↑</string>
    <string name="aide">Aide</string>
    <string name="help_instructions">1- Scanner la pièce.\n\n2- Appuyer sur "Terminer".\n\n3- Trouver les clés correspondant aux coffres pour les ouvrir.</string>
    <string name="help_title">Instructions</string>
    <string name="terminer">Terminer</string>
    <string name="menu_title">Escape game</string>
    <string name="noObject">Aucun objet</string>
</resources>
