<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="150sp"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/menu_title"
        android:textSize="40sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/jouer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50sp"
            android:onClick="onJouerClick"
            android:text="@string/jouer"
            android:textSize="70sp" />

        <Button
            android:id="@+id/options"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50sp"
            android:onClick="onOptionsClick"
            android:text="@string/options"
            android:textSize="70sp" />

        <Button
            android:id="@+id/aide"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:onClick="onAideClick"
            android:text="@string/aide"
            android:textSize="70sp" />
    </LinearLayout>

</LinearLayout>