<!--
   Copyright 2016 Google Inc.

   Licensed under the Apache License, Version 2.0 (the "License");
   you may not use this file except in compliance with the License.
   You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

   Unless required by applicable law or agreed to in writing, software
   distributed under the License is distributed on an "AS IS" BASIS,
   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
   See the License for the specific language governing permissions and
   limitations under the License.
-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.ter_ra_android.MainActivity">

  <android.opengl.GLSurfaceView
      android:id="@+id/surfaceview"
      android:layout_width="fill_parent"
      android:layout_height="fill_parent"
      android:layout_gravity="top"/>

  <Button
      android:id="@+id/Menu"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:onClick="onMenuClick"
      android:text="@string/menu"
      android:visibility="visible"
      tools:visibility="visible" />

  <android.support.design.widget.BottomNavigationView
      android:id="@+id/inventory"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_alignBottom="@id/surfaceview"
      android:background="#00BCD4"
      app:menu="@menu/inventory" />

  <ToggleButton
      android:id="@+id/toggleButton"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_above="@+id/inventory"
      android:layout_centerHorizontal="true"
      android:layout_marginBottom="-5dp"
      android:onClick="hideOrShowInventory"
      android:text="@string/togglebutton"
      android:textOff="@string/inventory_visible"
      android:textOn="@string/inventory_invisible"/>

  <Button
      android:id="@+id/terminate"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/terminer"
      android:layout_alignBottom="@id/surfaceview"
      android:layout_centerHorizontal="true"
      android:onClick="terminate"/>

</RelativeLayout>
